<resources>
    <string name="app_name">毕业设计智能交通项目</string>
    <string name="text_bring_into_use">开始使用</string>
    <string name="text_please_enter_password">请输入密码</string>
    <string name="text_please_enter_user_name">请输入用户名</string>
    <string name="text_auto_login">自动登录</string>
    <string name="text_keep_password">记住密码</string>
    <string name="text_login">登陆</string>
    <string name="text_register">注册</string>
    <string name="text_acconut_isemty">用户名不能为空！</string>
    <string name="text_pwd_isemty">用户密码不能为空！</string>
    <string name="text_cancel">取消</string>
    <string name="text_please_enter_user_pwd">请输入用户密码</string>
    <string name="text_please_enter_re_user_pwd">请再次输入您的密码</string>
    <string name="text_please_enter_user_phone_number">请输入您的手机号码</string>
    <string name="text_phone_number_isemty">电话号码不为空</string>
    <string name="text_two_count_pwd_disaffinity">两次输入的密码不相同</string>
    <string name="text_net_setting">网络设置</string>
    <string name="text_server_address">服务器地址：</string>
    <string name="text_server_address_fromat">192.168.1.101</string>
    <string name="text_server_port">端口号：</string>
    <string name="text_ignore">忽略</string>
    <string name="text_confirm">确定</string>
    <string name="text_user_register">用户注册</string>
    <string name="text_ip_fromat_error">IP地址格式错误！</string>
    <string name="text_server_port_fromat">0-65535</string>
    <string name="text_server_port_error">端口号范围错误！</string>
    <string name="text_server_ip_error">IP地址格式错误！</string>
    <string name="text_save_server_succeed">IP地址%1$s:端口号%2$s 保存成功！</string>
    <string name="text_mian_ui_one">环境指标</string>
    <string name="text_mian_ui_two">小车控制</string>
    <string name="text_mian_ui_three">主界面三</string>
    <string name="text_mian_ui_four">系统设置</string>


    <!--旧版系统使用的数据-->
    <string name="title_ip">IP设置</string>
    <string name="control">控制</string>
    <string name="condition">状态</string>
    <string name="account">账户</string>
    <string name="title_my_road">我的路况</string>
    <string name="title_one_station">1号站台</string>
    <string name="title_two_station">2号站台</string>
    <string name="title_park">停车查询</string>
    <string name="handl_rate">费率金额</string>
    <string name="set_rate">费率设置</string>/
    <string name="success">%s成功</string>
    <string name="park_show_rate">停车车的费率位：%1$ 元/次</string>
    <string name="handl">%1$s不能为空</string>
    <string name="road_port">路口</string>
    <string name="msg_pm_pollute">PM2.5污染严重，请全副武装哦！</string>
    <string name="msg_co2_high">CO2污染太严重啊</string>
    <string name="msg_temp_high">热死了！热死了！赶紧取屋里躲躲！</string>
    <string name="msg_temp_low">太冷了！进屋躲躲</string>
    <string name="msg_humi_high">湿度太大！</string>
    <string name="msg_humi_low">空气太干燥</string>
    <string name="handl_recharge">充值金额</string>
    <string name="recharge_msg">在%1$s将要给%2$s号小车充值%3$s元</string>
    <string name="dialog_title_recharge">小车账户充值</string>
    <string name="charge">充值</string>
    <string name="a">%s失败</string>
    <string name="balance">小车账户余额是：%1$s元</string>
    <string name="current_speed">小车的当前速度是：%s</string>
    <string name="set">设置</string>
    <string name="one_bus_speed">1号公交：</string>
    <string name="two_bus_speed">2号公交：</string>
    <string name="envir">道路环境：  PM2.5：%1$s μg/m³ , 温度：%2$s ℃  湿度：%3$s %%， CO2：%4$s μg/m³</string>
    <string name="handl_ip">IP地址</string>
    <string name="title_main">主界面</string>
    <array name="title_road_light">
        <item>路口</item>
        <item>红灯时长/S</item>
        <item>绿灯时长/S</item>
        <item>黄灯时长/S</item>
    </array>
    <string name="car_id">车号：</string>
    <string name="etc_log">查询ETC日志</string>
    <string name="ip_failed">请输入有效的IP地址</string>
    <string name="msg_light_high">太刺眼了！</string>
    <string name="msg_light_low">光线较暗，请开灯驾驶！</string>
    <string name="hint_account">1-9999</string>
    <string name="title_road_envir">道路环境</string>
    <string name="title_road_msg">道路信息</string>
    <string name="current_time">当前时间是：%s</string>
    <string name="query">查询</string>
    <string name="light">光照强度：</string>
    <string name="its">智能\\n交通系统</string>
    <string name="free_location">空闲车位</string>
    <string name="road_envir">道路环境</string>
    <string name="light_msg_query">红绿灯配置信息查询：</string>
    <string name="light_road_query">路面红绿灯信息查询：</string>
    <string name="etc_cost">ETC_费率：</string>
    <string name="park_card">停车挂失</string>
    <string name="car_current_locus">小车当前轨迹：</string>
    <string name="car_current_location">小车当前位置：</string>
    <string name="car_account_charge">小车账户充值：</string>
    <string name="light_strength">光照强度：</string>
    <string name="air_quality">空气质量：</string>
    <string name="consumption_record_query">消费记录查询</string>
    <string name="sure">确定</string>
    <string name="bout">元/次</string>
    <string name="stop">停止</string>
    <string name="start_stop">启停</string>
    <string name="start">启动</string>
    <string name="bus_envir">道路环境：  PM2.5：%1$s μg/m³ , 温度：%2$s ℃  湿度：%3$s %%， CO2：%4$s μg/m³</string>
    <string name="bus_station">距1号站台距离：  1号公交：%1$s m , 2号公交：%2$s m  距2号站台距离：  1号公交：%3$s m , 2号公交：%4$s m</string>
    <string name="waitiong_envir">候车环境：</string>
    <string name="one_location">1号</string>
    <string name="two_location">2号</string>
    <string name="one_station">距离1号站台距离：</string>
    <string name="two_station">距2号站台距离：</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text_ideas">创意</string>
    <string name="text_environmental_index">环境指标</string>
    <string name="text_manual_control">手动控制</string>
    <string name="text_system_settings">系统设置</string>
    <string name="text_get_the_credit">弄信贷</string>
    <string name="text_rural_wechat_business">农电微商</string>
    <string name="text_zi_xun_tong">质询通</string>

    <string name="tv_car_speel_title">小车当前车速:</string>

    <string name="tv_car_id">车号：</string>

    <string name="btn_text_query">查询</string>
    <string name="text_account_manager">账号管理</string>
    <string name="text_language_select">语言选择</string>
    <string name="text_ip_setting">IP设置</string>
    <string name="text_user_unLogin">注销用户</string>
    <string name="txt_user_login_title">用户登录</string>
    <string name="msg_user_register_ok">用户注册成功</string>
    <string name="msg_user_register_fail">用户注册失败</string>
</resources>
