<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fl_dialog_base_main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/fl_dialog_base_main_content"
        android:layout_marginTop="15dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acb_base_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_cancel"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acb_base_dialog_ignore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_ignore"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acb_base_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_confirm"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>